--- a/index.html
+++ b/index.html
@@ -87,12 +87,14 @@
       margin-top: 20px;
     }
 
-    footer.footer {
-      text-align: center;
-      padding: 20px;
-      color: var(--accent);
-      border-top: 2px solid var(--accent);
-    }
+   footer.footer {
+  text-align: center;
+  padding: 20px;
+  color: #fff;                 /* النص أبيض */
+  background: var(--accent);   /* نفس الأخضر الزيتوني */
+  border-top: 3px solid var(--accent);
+  transition: background 0.3s ease, color 0.3s ease;
+}
 
     .player {
       display: flex;
