--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       color: var(--fg);
       font-family: "Scheherazade", "Amiri", serif;
       line-height: 2.3;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
 
     header.topbar {
