--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="theme-color" content="#3b7f5a" />
 
   <style>
-    :root {
-      --bg: #f8f8f4;
-      --fg: #222;
-      --accent: #1a6334;
-      --card: #fff;
-    }
+ :root {
+  --bg: #f7f7f7;       /* الخلفية العامة: رمادي فاتح جدًا */
+  --fg: #000;          /* نصوص الآيات: أسود واضح */
+  --accent: #3b7f5a;   /* رقم الآية والعناوين: أخضر أنيق */
+  --card: #fff;        /* خلفية مربعات النص */
+}
 
     html[data-theme='dark'] {
       --bg: #f3e9d2;      /* بيج فاتح للخلفية */
