--- a/index.html
+++ b/index.html
@@ -6,122 +6,170 @@
   <title>سورة الكهف</title>
   <meta name="theme-color" content="#3b7f5a" />
 
-  <style>
- :root {
-  --bg: #f7f7f7;       /* الخلفية العامة: رمادي فاتح جدًا */
-  --fg: #000;          /* نصوص الآيات: أسود واضح */
-  --accent: #3b7f5a;   /* رقم الآية والعناوين: أخضر أنيق */
-  --card: #fff;        /* خلفية مربعات النص */
+<style>
+:root {
+  /* 🌞 الوضع الفاتح (بيج أنيق) */
+  --bg: #f3e9d2;       
+  --fg: #3e2f1c;       
+  --accent: #b6893c;   
+  --card: #f7f1e1;     
 }
 
-    html[data-theme='dark'] {
-      --bg: #f3e9d2;      /* بيج فاتح للخلفية */
-      --fg: #3e2f1c;      /* بني داكن للنص */
-      --accent: #b6893c;  /* ذهبي فاتح للعناوين والأزرار */
-      --card: #f7f1e1;    /* بيج أفتح قليلاً للمربعات الداخلية */
-    }
+/* 🌙 الوضع الليلي (رمادي غامق وأخضر باهت) */
+html[data-theme='dark'] {
+  --bg: #1e1e1e;              
+  --fg: #f0f0f0;              
+  --accent: #a5d6a7;          
+  --card: #2a2a2a;            
+  --quran-text: #e0e0e0;      
+}
 
-    body {
-      margin: 0;
-      background-color: var(--bg);
-      color: var(--fg);
-      font-family: "Scheherazade", "Amiri", serif;
-      line-height: 2.3;
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
+body {
+  margin: 0;
+  background-color: var(--bg);
+  color: var(--fg);
+  font-family: "Scheherazade", "Amiri", serif;
+  line-height: 2.3;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  direction: rtl;
+}
 
-    header.topbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: var(--accent);
-      color: #fff;
-      padding: 10px 16px;
-    }
+/* ✅ شريط العنوان */
+header.topbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--accent);
+  color: #fff;
+  padding: 10px 16px;
+  transition: background-color 0.3s ease;
+}
 
-    header.topbar h1 {
-      font-size: 1.5rem;
-      margin: 0;
-    }
+header.topbar h1 {
+  font-size: clamp(1.2rem, 2vw, 1.8rem);
+  margin: 0;
+}
 
-    .btn {
-      background: #fff;
-      color: var(--accent);
-      border: none;
-      border-radius: 8px;
-      padding: 8px 12px;
-      cursor: pointer;
-      font-size: 0.95rem;
-      margin-left: 6px;
-      transition: background .2s ease;
-    }
-
-    .btn:hover { background: #f0f0f0; }
-
-    .bismillah {
-      font-size: 48px;
-      text-align: center;
-      margin: 25px 0;
-      color: var(--accent);
-    }
-
-    .ayahs {
-      font-size: 22px;
-      text-align: justify;
-      text-justify: inter-word;
-      direction: rtl;
-      background: var(--card);
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      margin: 20px auto;
-      width: 90%;
-      max-width: 900px;
-    }
-
-    .ayah { display: inline; white-space: pre-wrap; }
-    .num { color: var(--accent); font-size: 20px; margin: 0 3px; }
-
-    .note {
-      text-align: center;
-      color: var(--accent);
-      margin-top: 20px;
-    }
-
-   footer.footer {
-  text-align: center;
-  padding: 20px;
-  color: #fff;                 /* النص أبيض */
-  background: var(--accent);   /* نفس الأخضر الزيتوني */
-  border-top: 3px solid var(--accent);
+/* ✅ الأزرار */
+.btn {
+  background: #fff;
+  color: var(--accent);
+  border: none;
+  border-radius: 8px;
+  padding: 8px 12px;
+  cursor: pointer;
+  font-size: clamp(0.9rem, 1.5vw, 1rem);
+  margin-left: 6px;
   transition: background 0.3s ease, color 0.3s ease;
 }
 
-    .player {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 20px auto;
-      width: 90%;
-      max-width: 900px;
-    }
+.btn:hover {
+  background: #f0f0f0;
+}
 
-    audio {
-      width: 100%;
-      margin-top: 10px;
-      border-radius: 10px;
-    }
-  </style>
+/* أزرار الوضع الليلي */
+html[data-theme='dark'] .btn {
+  background: #333;
+  color: var(--fg);
+}
+html[data-theme='dark'] .btn:hover {
+  background: #444;
+}
+
+/* ✅ البسملة */
+.bismillah {
+  font-size: clamp(32px, 6vw, 48px);
+  text-align: center;
+  margin: 25px 0;
+  color: var(--accent);
+}
+
+/* ✅ نصوص الآيات */
+.ayahs {
+  font-size: clamp(18px, 2.5vw, 26px); /* تكيف تلقائي حسب الشاشة */
+  text-align: justify;
+  text-justify: inter-word;
+  direction: rtl;
+  background: var(--card);
+  padding: clamp(15px, 3vw, 25px);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin: 20px auto;
+  width: 90%;
+  max-width: 900px;
+  color: var(--fg);
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+/* نص الآيات في الوضع الليلي */
+html[data-theme='dark'] .ayahs {
+  color: var(--quran-text);
+}
+
+/* ✅ رقم الآية */
+.num {
+  color: var(--accent);
+  font-size: 0.9em;
+  margin: 0 4px;
+}
+
+/* ✅ الملاحظة */
+.note {
+  text-align: center;
+  color: var(--accent);
+  margin-top: 20px;
+  font-size: clamp(14px, 2vw, 16px);
+}
+
+/* ✅ التذييل */
+footer.footer {
+  text-align: center;
+  padding: 20px;
+  color: #fff;
+  background: var(--accent);
+  border-top: 3px solid var(--accent);
+  transition: background 0.3s ease, color 0.3s ease;
+  font-size: clamp(14px, 1.5vw, 16px);
+}
+
+/* ✅ مشغل الصوت */
+.player {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px auto;
+  width: 90%;
+  max-width: 900px;
+}
+
+audio {
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 10px;
+}
+
+/* ✅ تحسين القراءة على الشاشات الصغيرة */
+@media (max-width: 600px) {
+  .ayahs {
+    line-height: 2.4;
+  }
+  .num {
+    font-size: 0.85em;
+  }
+}
+</style>
+
 </head>
 
 <body>
   <header class="topbar">
-    <h1>سورة الكهف</h1>
-    <div class="actions">
-      <button id="themeToggle" class="btn">وضع ليلي</button>
-      <button id="playAudio" class="btn">استماع</button>
-    </div>
-  </header>
+  <h1>سورة الكهف</h1>
+  <div class="actions">
+    <button id="themeToggle" class="btn">وضع ليلي</button>
+    <button id="playAudio" class="btn">استماع</button>
+    <button id="shareBtn" class="btn">مشاركة</button>
+  </div>
+</header>
 
   <main class="container">
      <div class="bismillah">﷽</div>
@@ -249,28 +297,65 @@
 
   <footer class="footer">جمعة مُباركة والله يكتب أجركم جميعًا</footer>
 
-  <script>
-    // 🌙 الوضع الليلي والفاتح
-    const html = document.documentElement;
-    const themeBtn = document.getElementById('themeToggle');
-    function setTheme(mode) {
-      html.setAttribute('data-theme', mode);
-      themeBtn.textContent = mode === 'dark' ? 'وضع فاتح' : 'وضع ليلي';
-      localStorage.setItem('theme', mode);
-    }
-    const savedTheme = localStorage.getItem('theme') || 
-      (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
-    setTheme(savedTheme);
-    themeBtn.addEventListener('click', () => {
-      setTheme(html.getAttribute('data-theme') === 'dark' ? 'light' : 'dark');
-    });
+<script>
+  // 🌙 التبديل بين الوضع الليلي والفاتح
+  const html = document.documentElement;
+  const themeBtn = document.getElementById('themeToggle');
 
-    // 🎧 تشغيل الصوت
-    const playBtn = document.getElementById('playAudio');
-    const player = document.getElementById('player');
-    playBtn.addEventListener('click', () => {
+  function setTheme(mode) {
+    html.setAttribute('data-theme', mode);
+    themeBtn.textContent = mode === 'dark' ? 'وضع فاتح' : 'وضع ليلي';
+    localStorage.setItem('theme', mode);
+  }
+
+  const savedTheme = localStorage.getItem('theme') ||
+    (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+
+  setTheme(savedTheme);
+
+  themeBtn.addEventListener('click', () => {
+    setTheme(html.getAttribute('data-theme') === 'dark' ? 'light' : 'dark');
+  });
+
+  // 🎧 زر التشغيل والإيقاف للصوت
+  const playBtn = document.getElementById('playAudio');
+  const player = document.getElementById('player');
+
+  playBtn.addEventListener('click', () => {
+    if (player.paused) {
       player.play();
-    });
-  </script>
+      playBtn.textContent = 'إيقاف';
+    } else {
+      player.pause();
+      playBtn.textContent = 'استماع';
+    }
+  });
+
+  // ✅ تحديث الزر لما ينتهي الصوت
+  player.addEventListener('ended', () => {
+    playBtn.textContent = 'استماع';
+  });
+
+  // 📤 زر المشاركة
+  const shareBtn = document.getElementById('shareBtn');
+  shareBtn.addEventListener('click', async () => {
+    const shareData = {
+      title: 'سورة الكهف',
+      text: 'استمع إلى سورة الكهف كاملة 🌿',
+      url: window.location.href
+    };
+
+    if (navigator.share) {
+      try {
+        await navigator.share(shareData);
+      } catch (err) {
+        console.error('تم إلغاء المشاركة أو حدث خطأ:', err);
+      }
+    } else {
+      // للمتصفحات اللي ما تدعم Web Share API
+      alert('المشاركة غير مدعومة في هذا المتصفح. انسخ الرابط يدويًا:\n' + window.location.href);
+    }
+  });
+</script>
 </body>
 </html>
